# api_burgers

./: README.md  conftest.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: devsecops.yml  notify_telegram.yml  test.yml
10/: index.html
10/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: duration-trend.json  history-trend.json  history.json
10/widgets/: categories-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
11/: index.html
11/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  history.json  retry-trend.json
11/widgets/: duration-trend.json  (+5 more)
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
26/: index.html
27/: index.html
28/: index.html
3/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
4/: index.html
5/: index.html
7/: index.html
8/: index.html
9/: index.html
fixtures/: operations.py
last-history/: categories-trend.json  duration-trend.json  history.json
tests/: config.py  test_create_order.py  test_create_user.py  test_edit_user.py  test_get_orders_user.py  test_login_user.py  test_secrets.txt
(+812 files in other folders)
